--- a/agency/rootfs/configs/vexpress_defconfig
+++ b/agency/rootfs/configs/vexpress_defconfig
@@ -1,12 +1,13 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2020.02-rc3-g6b7644e22-dirty Configuration
+# Buildroot 2020.02-rc3-g8ff8000b3-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
 BR2_HOST_GCC_AT_LEAST_5=y
 BR2_HOST_GCC_AT_LEAST_6=y
 BR2_HOST_GCC_AT_LEAST_7=y
+BR2_HOST_GCC_AT_LEAST_8=y
 
 #
 # Target options
@@ -547,7 +548,7 @@ BR2_PACKAGE_PULSEAUDIO_HAS_ATOMIC=y
 # BR2_PACKAGE_BZIP2 is not set
 # BR2_PACKAGE_GZIP is not set
 # BR2_PACKAGE_LRZIP is not set
-# BR2_PACKAGE_LZ4 is not set
+BR2_PACKAGE_LZ4=y
 # BR2_PACKAGE_LZIP is not set
 # BR2_PACKAGE_LZOP is not set
 # BR2_PACKAGE_P7ZIP is not set
