--- a/agency/rootfs/configs/merida_defconfig
+++ b/agency/rootfs/configs/merida_defconfig
@@ -1587,7 +1587,7 @@ BR2_PACKAGE_LIBGPG_ERROR_SYSCFG="arm-unknown-linux-gnueabi"
 # BR2_PACKAGE_LIBTOMCRYPT is not set
 # BR2_PACKAGE_LIBUECC is not set
 # BR2_PACKAGE_MBEDTLS is not set
-# BR2_PACKAGE_NETTLE is not set
+BR2_PACKAGE_NETTLE=y
 # BR2_PACKAGE_OPENSSL is not set
 BR2_PACKAGE_PROVIDES_HOST_OPENSSL="host-libopenssl"
 # BR2_PACKAGE_RHASH is not set
